--- a/compose/kraft/connect-demo.yml
+++ b/compose/kraft/connect-demo.yml
@@ -33,6 +33,8 @@ services:
       - "19092:19092"
       - "9092:9092"
       - "9102:9102"
+    volumes:
+      - ./kafka-data:/tmp/kraft-combined-logs
     environment:
       KAFKA_NODE_ID: '1'
       KAFKA_PROCESS_ROLES: 'broker,controller'
@@ -135,5 +137,6 @@ services:
         - "3306:3306"
     volumes:
       - ./mysql:/etc/mysql/mysql.conf.d
+      - ./mysql-data:/var/lib/mysql
     environment:
         MYSQL_ROOT_PASSWORD: zp3k4cc
